<resources>
    <string name="app_name">Explore Purworejo</string>

    <string name="heading_size">21sp</string>
    <string name="heading1">24sp</string>
    <string name="keterangan">10sp</string>
    <string name="btn_text_size">14sp</string>

    //disini
    <string name="login1">Masuk dulu ya</string>
    <string name="lupa_kata_sandi">Lupa kata sandi ?</string>
    <string name="mulai_sekarang">Mulai Sekarang</string>
    <string name="belum_punya_akun">Belum Punya Akun?</string>
    <string name="sudah_punya_akun">Sudah Punya Akun?</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="simpan">Simpan</string>
    <string name="ingat_saya">Ingat saya</string>
    <string name="reset_kata_sandi">Reset Kata Sandi</string>
    <string name="desc_reset_kata_sandi">Masukkan username dan nomor telefon\nyang digunakan untuk mendaftar</string>
    <string name="pilih_metode">Pilih Metode</string>
    <string name="desc_pilih_metode">Pilih metode untuk merubah\nkata sandi</string>
    <string name="sms">SMS</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="informasi_akun">Informasi Akun</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="desc_tentang_aplikasi">Lörem ipsum traskap jasore. Hyponde trehaliga gånat emäliga. Bur lysat tåskapet. Engen mikrongar i serat att anaras. Intrakikirad kroner. Kode sagågon epigt. Beging. Dens preloliga hyponing. Du kan vara drabbad.</string>
    <string name="syarat_dan_ketentuan">Syarat dan Ketentuan</string>
    <string name="desc_syarat_dan_ketentuan">Lörem ipsum traskap jasore. Hyponde trehaliga gånat emäliga. Bur lysat tåskapet. Engen mikrongar i serat att anaras. Intrakikirad kroner. Kode sagågon epigt. Beging. Dens preloliga hyponing. Du kan vara drabbad.</string>
    <string name="keluar_akun">Keluar akun</string>
    <string name="mau_kemana_hari_ini">Mau kemana hari ini ?</string>
    <string name="hai">Hai,</string>
    <string name="pendaftaran_berhasil">Pendaftaran Berhasil</string>
    <string name="pendaftaran_berhasil_desc">Silahkan masuk dengan akun yang berhasil didaftarkan</string>

    <string name="buat_akun">Buat Akun</string>
    <string name="selanjutnya">Selanjutnya</string>

    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="bio">Bio</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="komfirmasi_kata_sandi_baru">Konfirmasi Kata Sandi Baru</string>
    <string name="konfirmasi_kata_sandi">Konfirmasi kata Sandi</string>
    <string name="no_telefon">Nomor Telefon</string>
    <string name="ket_mendaftar">Dengan mendaftar, kamu sudah setuju dengan semua syarat dan ketentuan dalam aplikasi</string>
    <string name="verifikasi">Verifikasi</string>
    <string name="desc_verifikasi">Masukkan kode OTP yang diterima melalui SMS\nke nomor yang telah didaftarkan</string>
    <string name="verifikasi_kode">Verifikasi kode</string>
    <string name="kata_sandi_baru">Kata Sandi Baru</string>
    <string name="desc_kata_sandi_baru">Masukkan kata sandi baru,\njangan sampai lupa lagi ya</string>
    <string name="kata_sandi_diperbarui">Kata Sandi\nDiperbarui</string>
    <string name="desc_kata_sandi_diperbarui">Silahkan masuk dengan kata sandi baru</string>

    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>

    //nav bottom
    <string name="nav_home">Home</string>
    <string name="nav_jelajah">Jelajah</string>
    <string name="nav_profil">Profil</string>

    //Onboard Screen
    //title
    <string name="onboard_title_1">Selamat Datang</string>
    <string name="onboard_title_2">Jelajahi Purworejo</string>
    <string name="onboard_title_3">Ciptakan Kenangan</string>

    //deskripsi
    <string name="onboard_deskripsi_1">Selamat datang di aplikasi Explore\nPurworejo, kami akan membantu kamu\nmenjelajah keindahan Purworejo</string>
    <string name="onboard_deskripsi_2">Menjelajah Purworejo menjadi lebih\nmudah, jangan pernah lewatkan setiap\nkeindahan di dalamnya</string>
    <string name="onboard_deskripsi_3">Setiap sudut Purworejo selalu\nmemberikan kenangan dan cerita\ntersendiri bagi kamu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //no connection
    <string name="no_connection_title">Tidak ada koneksi internet</string>
    <string name="no_connection_desc">Hubungkan ke internet untuk menggunakan aplikasi ini ya</string>
    <string name="coba_lagi">Coba lagi</string>

    <string name="kategori">Kategori</string>
    <string name="hasil_pencarian">Hasil Pencarian</string>
    <string name="hasil_pencarian_desc">jika hasil pencarian belum memuaskan,\nsilahkan coba kata kunci yang lain</string>
    <string name="tampilkan_rute">Tampilkan rute</string>

    <string name="lorem">Lörem ipsum traskap jasore. Hyponde trehaliga gånat emäliga. Bur lysat tåskapet. Engen mikrongar i serat att anaras. Intrakikirad kroner. Kode sagågon epigt. Beging. Dens preloliga hyponing. Du kan vara drabbad. Lörem ipsum traskap jasore. Hyponde trehaliga gånat emäliga. Bur lysat tåskapet. Engen mikrongar i serat att anaras. Intrakikirad kroner. Kode sagågon epigt. Beging. Dens preloliga hyponing. Du kan vara drabbad. Lörem ipsum traskap jasore. Hyponde trehaliga gånat emäliga. Bur lysat tåskapet. Engen mikrongar i serat att anaras. Intrakikirad kroner. Kode sagågon epigt. Beging. Dens preloliga hyponing. Du kan vara drabbad. Lörem ipsum traskap jasore. Hyponde trehaliga gånat emäliga. Bur lysat tåskapet. Engen mikrongar i serat att anaras. Intrakikirad kroner. Kode sagågon epigt. Beging. Dens preloliga hyponing. Du kan vara drabbad</string>
    <string name="title_activity_coba_rute">CobaRute</string>
    <string name="rekomendasi_wisata">Rekomendasi Wisata</string>
    <string name="goa">Goa</string>
    <string name="air_terjun">Air Terjun</string>
    <string name="alam">Alam</string>
    <string name="olahraga">Olahraga</string>
    <string name="kuliner">Kuliner</string>
    <string name="rohani">Rohani</string>
    <string name="sejarah">Sejarah</string>

</resources>