<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    tools:context=".MasukDanDaftar.Daftar2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:text="@string/buat_akun"
            android:textSize="24sp"
            android:textColor="@color/main_text_color"
            android:fontFamily="@font/poppins_semi_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="horizontal"
            android:layout_gravity="right">

            <TextView
                android:text="2"
                android:textSize="64sp"
                android:textColor="@color/hijau"
                android:fontFamily="@font/poppins_semi_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="/3"
                android:textSize="24sp"
                android:textColor="@color/text_color"
                android:fontFamily="@font/poppins_semi_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:text="@string/jenis_kelamin"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"/>

        <RadioGroup
            android:id="@+id/radio_grup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="20px">

            <RadioButton
                android:id="@+id/laki_laki"
                android:text="@string/laki_laki"
                android:textSize="12sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/text_color"
                android:buttonTint="@color/hijau"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="32dp"/>

            <RadioButton
                android:id="@+id/perempuan"
                android:text="@string/perempuan"
                android:textSize="12sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/text_color"
                android:buttonTint="@color/hijau"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>

        <TextView
            android:text="@string/tanggal_lahir"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"/>

        <DatePicker
            android:id="@+id/DPtanggal_lahir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            android:spinnersShown="true"/>

        <Button
            android:id="@+id/btnDaftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/daftar"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/putih"
            android:textAllCaps="false"
            android:background="@drawable/bg_button"
            android:layout_marginTop="20dp"
            android:onClick="keDaftar3"/>

        <LinearLayout
            android:layout_marginTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <TextView
                android:text="@string/sudah_punya_akun"
                android:textColor="@color/text_color"
                android:fontFamily="@font/poppins_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/TVDaftar"
                android:text="@string/masuk"
                android:textColor="@color/hijau"
                android:fontFamily="@font/poppins_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:onClick="keMasukb"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>