<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    tools:context=".MasukDanDaftar.DaftarActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:text="@string/buat_akun"
            android:textSize="24sp"
            android:textColor="@color/main_text_color"
            android:fontFamily="@font/poppins_semi_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="horizontal"
            android:layout_gravity="right">

            <TextView
                android:text="1"
                android:textSize="64sp"
                android:textColor="@color/hijau"
                android:fontFamily="@font/poppins_semi_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="/3"
                android:textSize="24sp"
                android:textColor="@color/text_color"
                android:fontFamily="@font/poppins_semi_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ETnama_lengkap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/nama_lengkap"
            app:hintTextColor="@color/text_color"
            app:boxStrokeColor="@color/text_color"
            app:boxStrokeWidthFocused="1dp"
            android:layout_marginTop="36dp">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/inputText"
                android:inputType="textCapWords"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ETusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/username"
            app:hintTextColor="@color/text_color"
            app:boxStrokeColor="@color/text_color"
            app:boxStrokeWidthFocused="1dp"
            android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/inputText"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ETemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/email"
            app:hintTextColor="@color/text_color"
            app:boxStrokeColor="@color/text_color"
            app:boxStrokeWidthFocused="1dp"
            android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/inputText"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ETkata_sandi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/kata_sandi"
            app:hintTextColor="@color/text_color"
            app:boxStrokeColor="@color/text_color"
            app:boxStrokeWidthFocused="1dp"
            app:endIconMode="password_toggle"
            android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/inputText"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:text="@string/ket_mendaftar"
            android:textSize="12sp"
            android:textColor="@color/text_color"
            android:fontFamily="@font/poppins_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"/>

        <Button
            android:id="@+id/btnDaftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/daftar"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/putih"
            android:textAllCaps="false"
            android:background="@drawable/bg_button"
            android:layout_marginTop="20dp"
            android:onClick="keDaftar2"/>

        <LinearLayout
            android:layout_marginTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <TextView
                android:text="@string/sudah_punya_akun"
                android:textColor="@color/text_color"
                android:fontFamily="@font/poppins_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/TVDaftar"
                android:text="@string/masuk"
                android:textColor="@color/hijau"
                android:fontFamily="@font/poppins_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:onClick="keMasuk"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>