<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:gravity="center"
    tools:context=".MasukDanDaftar.SuksesUpdateSandiActivity">

    <TextView
        android:text="@string/kata_sandi_diperbarui"
        android:textSize="28sp"
        android:textColor="@color/main_text_color"
        android:fontFamily="@font/poppins_semi_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:lottie_speed="1"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/check"
        app:lottie_autoPlay="true"
        android:layout_marginTop="36dp"/>

    <TextView
        android:text="@string/desc_kata_sandi_diperbarui"
        android:textSize="14sp"
        android:textColor="@color/main_text_color"
        android:fontFamily="@font/poppins_regular"
        android:textAlignment="center"
        android:lineHeight="26sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnmasuk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/masuk"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/putih"
        android:textAllCaps="false"
        android:background="@drawable/bg_button"
        android:layout_marginTop="100dp"
        android:onClick="keMasuk"/>


</LinearLayout>