<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SyaratDanKetentuan"
    android:padding="32dp"
    android:orientation="vertical">

    <ImageView
        android:src="@drawable/ic_kembali_bghijau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/app_name"
        android:textSize="12sp"
        android:textColor="@color/text_color"
        android:fontFamily="@font/poppins_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"/>

    <TextView
        android:text="@string/syarat_dan_ketentuan"
        android:textSize="24sp"
        android:textColor="@color/main_text_color"
        android:fontFamily="@font/poppins_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-3dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:src="@drawable/ic_syaratdanketentuanpict"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="28dp"/>

            <TextView
                android:text="@string/desc_syarat_dan_ketentuan"
                android:textSize="14sp"
                android:textColor="@color/text_color"
                android:lineHeight="22sp"
                android:fontFamily="@font/poppins_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:justificationMode="inter_word"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>