<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="32dp"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/putih">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="50dp">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:lottie_speed="1"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/no_internet"
                app:lottie_autoPlay="true"
                android:layout_marginTop="36dp"/>

            <TextView
                android:text="@string/no_connection_title"
                android:textSize="24sp"
                android:textColor="@color/main_text_color"
                android:fontFamily="@font/poppins_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="24dp"/>

            <TextView
                android:text="@string/no_connection_desc"
                android:textSize="14sp"
                android:textColor="@color/text_color"
                android:lineHeight="22sp"
                android:fontFamily="@font/poppins_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"/>

            <Button
                android:id="@+id/BtnCobaLagi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/coba_lagi"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/putih"
                android:textAllCaps="false"
                android:background="@drawable/bg_button"
                android:layout_marginTop="32dp"
                android:onClick="btnCobaLagi"/>

        </LinearLayout>


    </androidx.cardview.widget.CardView>




</LinearLayout>